--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <a href="profile_information.html">Profile information</a>
     <a href="change_password.html">Doi mat khau</a>
     <a href="sodu.html">So du</a>
+    <a href="nhamogioi.html">Nha mo gioi tieu bieu</a>
     <a href="dangtin.html">Dang tin</a>
 </body>
 </html>
