--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <a href="change_password.html">Doi mat khau</a>
     <a href="sodu.html">So du</a>
     <a href="nhamogioi.html">Nha mo gioi tieu bieu</a>
+    <a href="nhamogioi_chitiet.html">Nha mo gioi chi tiet</a>
     <a href="dangtin.html">Dang tin</a>
 </body>
 </html>
