--- a/index1.html
+++ b/index1.html
@@ -340,7 +340,7 @@
             </div>
             <h3 class="fnAsapBold fn14 mgTop15"><i data-icon="A" class="icon"></i> &nbsp;03/11/2017 - 03/12/2017</h3>
             <p class="fnAsapMedium fn16 text-upper colorRed mgTop15"><i class="icon icon-dollar"></i> Giá: 6,8 tỷ/căn</p>
-            <p class="fnAsapMedium mgTop15 text-upper colorBrown"><span><i class="icon icon-navigation"></i>&nbsp; diện tích: 75m2</span><span><i data-icon="i" class="icon"></i> Tân Phú - Hồ Chí Minh</span></p>
+            <p class="fnAsapMedium mgTop15 text-upper colorBrown flex itemsCenter"><span><i class="icon icon-navigation"></i>&nbsp; diện tích: 75m2</span><span><i data-icon="i" class="icon"></i> Tân Phú - Hồ Chí Minh</span></p>
         </div>
     </div>
     <div class="block mgTop15 padding0-30">
