--- a/nhamogioi_chitiet.html
+++ b/nhamogioi_chitiet.html
@@ -206,9 +206,9 @@
         <div class="head-slider">
             <h3 class="text-upper fn21 borderBottom borderBottom fnAsapMedium colorBrownBold">NHÀ MÔ GIỚI KHÁC</h3>
         </div>
-        <div class="swiper-container">
+        <div class="swiper-container mgTop30">
             <div class="swiper-wrapper">
-                <div class="swiper-slide">
+                <div class="swiper-slide backGroundYellow4 borderShadow borderRadius8">
                     <div class="padding20">
                         <div class="text-center">
                             <img src="assets/images/avatar/avatar_01.png" alt="avatar" class="border50per">
@@ -236,7 +236,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="swiper-slide">
+                <div class="swiper-slide backGroundYellow4 borderShadow borderRadius8">
                     <div class="padding20">
                         <div class="text-center">
                             <img src="assets/images/avatar/avatar_01.png" alt="avatar" class="border50per">
@@ -264,7 +264,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="swiper-slide">
+                <div class="swiper-slide backGroundYellow4 borderShadow borderRadius8">
                     <div class="padding20">
                         <div class="text-center">
                             <img src="assets/images/avatar/avatar_01.png" alt="avatar" class="border50per">
@@ -292,7 +292,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="swiper-slide">
+                <div class="swiper-slide backGroundYellow4 borderShadow borderRadius8">
                     <div class="padding20">
                         <div class="text-center">
                             <img src="assets/images/avatar/avatar_01.png" alt="avatar" class="border50per">
@@ -306,22 +306,22 @@
                             </p>
                             <hr class="borderColor width36px mgTop10">
                         </div>
-                        <div class="mgTop3 width100per disInLineBlock">
-                            <i data-icon="1" class="icon floatLeft mgRight15"></i><span
+                        <div class="mgTop3 width100per flex itemsCenter">
+                            <i data-icon="1" class="icon"></i><span
                                 class="fn13 fnAsapRegular colorBlack floatLeft"> (84-8) 38208858</span>
                         </div>
-                        <div class="mgTop3 width100per disInLineBlock">
-                            <i class="icon icon-mail floatLeft mgTop2 mgRight15"></i><span
+                        <div class="mgTop3 width100per flex itemsCenter">
+                            <i class="icon icon-mail mgTop2"></i><span
                                 class="fn13 fnAsapRegular colorBlack floatLeft">info@tueminhgroup.com.vn</span>
                         </div>
-                        <div class="mgTop15 width100per disInLineBlock">
-                            <i class="icon icon-map floatLeft mgRight15"></i><span
-                                class="fn13 fnAsapRegular colorBlack floatLeft">74 Nguyễn Thị Minh Khai, Phường .6 Quận .3, TPHCM</span>
+                        <div class="mgTop15 width100per flex itemsCenter">
+                            <i class="icon icon-map"></i><span
+                                class="fn13 fnAsapRegular colorBlack floatLeft">74 Nguyễn Thị Minh Khai, P.6, Q.3, TPHCM</span>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="swiper-pagination"></div>
+            <div class="swiper-pagination mgTop30"></div>
         </div>
     </div>
 </div>
