--- a/change_password.html
+++ b/change_password.html
@@ -82,11 +82,11 @@
 <div class="padding30 backgroundWhite">
     <h3 class="fnAsapBold fn19 colorYellow text-upper"><i data-icon="D" class="icon verMiddle"></i>&nbsp; Đổi mật khẩu</h3>
     <form action="" class="input-form mgTop30 change-password" method="post">
-        <label for="password old" class="fn16 fnAsapRegular">Mật khẩu cũ<span class="colorRed"> (*)</span></label>
+        <label class="fn16 fnAsapRegular">Mật khẩu cũ<span class="colorRed"> (*)</span></label>
         <input type="password" name="old_password">
-        <label for="password new" class="fn16 fnAsapRegular mgTop30">Mật khẩu mới<span class="colorRed"> (*)</span></label>
+        <label class="fn16 fnAsapRegular mgTop30">Mật khẩu mới<span class="colorRed"> (*)</span></label>
         <input type="password" name="new_password">
-        <label for="confirm new password" class="fn16 fnAsapRegular mgTop30">Xác nhận mật khẩu mới<span class="colorRed"> (*)</span></label>
+        <label class="fn16 fnAsapRegular mgTop30">Xác nhận mật khẩu mới<span class="colorRed"> (*)</span></label>
         <input type="password" name="confirm_password">
         <div class="mgTop68">
             <button class="fn19 fnAsapRegular colorWhite text-upper mgTop30">đổi mật khẩu</button>
