--- a/profile_information.html
+++ b/profile_information.html
@@ -103,7 +103,7 @@
             </div>
             <div class="flex itemsCenter">
                 <label for="phone">Giới tính</label>
-                <select name="gender">
+                <select name="gender" class="select-type">
                     <option value="">-- Chọn --</option>
                     <option value="0">Nam</option>
                     <option value="1">Nữ</option>
@@ -112,17 +112,17 @@
             <div class="flex itemsTop">
                 <label for="phone" class="paddingTop25px">Địa chỉ <span class="colorRed"> (*)</span></label>
                 <div class="width80per group-address">
-                    <select name="city">
+                    <select name="city" class="select-type">
                         <option value="city">-- Chọn Tỉnh thành --</option>
                         <option value="0">Nam</option>
                         <option value="1">Nữ</option>
                     </select>
-                    <select name="province">
+                    <select name="province" class="select-type">
                         <option value="">-- Quận huyện --</option>
                         <option value="0">Nam</option>
                         <option value="1">Nữ</option>
                     </select>
-                    <select name="district">
+                    <select name="district" class="select-type">
                         <option value="">-- Phường xã --</option>
                         <option value="0">Nam</option>
                         <option value="1">Nữ</option>
@@ -162,22 +162,22 @@
     <div class="padding30 mgTop30 flex itemsCenter backgroundWhite">
         <div class="flex itemsCenter">
             <div class="created-inner width90per text-center">
-                <select name="">
+                <select name="" class="select-type">
                     <option value="type">-- Chọn Lĩnh vực --</option>
                     <option value="0">Nam</option>
                     <option value="1">Nữ</option>
                 </select>
-                <select name="">
+                <select name="" class="select-type">
                     <option value="city">-- Chọn Tỉnh thành --</option>
                     <option value="0">Nam</option>
                     <option value="1">Nữ</option>
                 </select>
-                <select name="">
+                <select name="" class="select-type">
                     <option value="province">-- Quận huyện --</option>
                     <option value="0">Nam</option>
                     <option value="1">Nữ</option>
                 </select>
-                <select name="">
+                <select name="" class="select-type">
                     <option value="city">-- Dự án --</option>
                     <option value="0">Nam</option>
                     <option value="1">Nữ</option>
@@ -191,22 +191,22 @@
     <div class="padding30 flex itemsCenter">
         <div class="flex itemsCenter">
             <div class="created-inner width90per text-center">
-                <select name="">
+                <select name="" class="select-type">
                     <option value="type">-- Chọn Lĩnh vực --</option>
                     <option value="0">Nam</option>
                     <option value="1">Nữ</option>
                 </select>
-                <select name="">
+                <select name="" class="select-type">
                     <option value="city">-- Chọn Tỉnh thành --</option>
                     <option value="0">Nam</option>
                     <option value="1">Nữ</option>
                 </select>
-                <select name="">
+                <select name="" class="select-type">
                     <option value="province">-- Quận huyện --</option>
                     <option value="0">Nam</option>
                     <option value="1">Nữ</option>
                 </select>
-                <select name="">
+                <select name="" class="select-type">
                     <option value="city">-- Dự án --</option>
                     <option value="0">Nam</option>
                     <option value="1">Nữ</option>
@@ -220,22 +220,22 @@
     <div class="padding30 flex itemsCenter backgroundWhite">
         <div class="flex itemsCenter">
             <div class="created-inner width90per text-center">
-                <select name="">
+                <select name="" class="select-type">
                     <option value="type">-- Chọn Lĩnh vực --</option>
                     <option value="0">Nam</option>
                     <option value="1">Nữ</option>
                 </select>
-                <select name="">
+                <select name="" class="select-type">
                     <option value="city">-- Chọn Tỉnh thành --</option>
                     <option value="0">Nam</option>
                     <option value="1">Nữ</option>
                 </select>
-                <select name="">
+                <select name="" class="select-type">
                     <option value="province">-- Quận huyện --</option>
                     <option value="0">Nam</option>
                     <option value="1">Nữ</option>
                 </select>
-                <select name="">
+                <select name="" class="select-type">
                     <option value="city">-- Dự án --</option>
                     <option value="0">Nam</option>
                     <option value="1">Nữ</option>
