--- a/dangtin.html
+++ b/dangtin.html
@@ -274,15 +274,17 @@
     </div>
     <div class="backgroundPost">
         <div class="padding15">
-            <h3 class="fn13 fnAsapMedium colorYellow text-upper text-left">TLịch đăng tin</h3>
+            <h3 class="fn13 fnAsapMedium colorYellow text-upper text-left">Lịch đăng tin</h3>
         </div>
         <div class="backgroundBody">
-            <div class="padding30">
-                <select name="" class="select-type">
-                    <option value="city">Loại tin  (*)</option>
+            <div class="padding20-30-0-30">
+                <select name="" class="select-type select-info">
+                    <option value="city">Loại tin (*)</option>
                     <option value="0">Nam</option>
                     <option value="1">Nữ</option>
                 </select>
+            </div>
+            <div class="padding0-20 width100per flex itemsCenter mgTop15">
                 <div class="width50per padding5-10">
                     <label class="fn16 fnAsapRegular">Ngày hiệu lực</label>
                     <input type="text" placeholder="Số toilet">
@@ -292,6 +294,31 @@
                     <input type="text" placeholder="Số toilet">
                 </div>
             </div>
+            <div class="padding30">
+                <hr class="borderDashed">
+                <div class="flex itemsCenter mgTop30">
+                    <span class="fn16 fnAsapMedium colorBlack2 text-upper">Đơn giá:  &nbsp;<span class="colorRed fnGothic fn26">0 đồng</span></span>
+                    <span class="fn16 fnAsapMedium colorBlack2 text-upper mgRight">Số ngày:  &nbsp;<span class="colorRed fnGothic fn26">5 ngày</span></span>
+                </div>
+                <hr class="borderDashed mgTop30">
+                <p class="fn16 fnAsapMedium text-left colorBlack2 mgTop30"><span class="text-upper">Tin thường: </span>Là loại tin đăng bằng chữ màu xanh, khung màu xanh</p>
+                <div class="text-left">
+                    <h3 class="fnAsapMedium fn19 colorYellow text-upper mgTop30">Thành tiền</h3>
+                    <div class="flex itemsCenter">
+                        <span class="fn16 fnAsapRegular">Phí dịch vụ trừ vào tài khoản: </span><span class="fn24 fnGothic colorRed">0 đồng</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="backgroundWhite ">
+        <div class="padding15-30 flex itemsCenter">
+            <button class="borderRadius5 borderDashed backgroundTransparent fn16 fnAsapBold colorYellow button-footer">
+                <i class="icon icon-cancel verMiddle mgRight15"></i><span class="mgTop3 disInLineBlock text-upper">huỷ</span>
+            </button>
+            <button class="borderRadius5 borderDashed backgroundTransparent fn16 fnAsapBold colorWhite backGroundRed button-footer">
+                <i class="icon icon-ticked verMiddle"></i>&nbsp; <span class="mgTop3 disInLineBlock text-upper">đăng tin ngay</span>
+            </button>
         </div>
     </div>
 </form>
